libnula/yyparser.output
Terminals unused in grammar

   PLUS_ASSIGN_TK
   MINUS_ASSIGN_TK
   MULT_ASSIGN_TK
   DIV_ASSIGN_TK
   REM_ASSIGN_TK
   LS_ASSIGN_TK
   SRS_ASSIGN_TK
   ZRS_ASSIGN_TK
   AND_ASSIGN_TK
   XOR_ASSIGN_TK
   OR_ASSIGN_TK
   SYNC_TK
   VOLATILE_TK
   NATIVE_TK
   THROWS_TK
   INTERFACE_TK
   CONST_TK
   GOTO_TK
   BYTE_TK
   SHORT_TK
   INT_TK
   LONG_TK
   CHAR_TK
   FLOAT_TK
   DOUBLE_TK
   TRUE_TK
   FALSE_TK


Grammar

    0 $accept: program $end

    1 literal: INT_LIT_TK
    2        | FP_LIT_TK
    3        | BOOL_LIT_TK
    4        | STRING_LIT_TK
    5        | NULL_TK

    6 type: primitive_type
    7     | reference_type

    8 primitive_type: INTEGRAL_TK
    9               | FP_TK
   10               | BOOLEAN_TK

   11 reference_type: class_or_interface_type
   12               | array_type

   13 class_or_interface_type: name

   14 class_type: class_or_interface_type

   15 interface_type: class_or_interface_type

   16 array_type: primitive_type dims
   17           | name dims

   18 name: simple_name
   19     | qualified_name

   20 simple_name: identifier

   21 qualified_name: name '.' identifier

   22 identifier: ID_TK

   23 program: /* empty */
   24        | package_declaration
   25        | import_declarations
   26        | type_declarations
   27        | package_declaration import_declarations
   28        | package_declaration type_declarations
   29        | import_declarations type_declarations
   30        | package_declaration import_declarations type_declarations

   31 import_declarations: import_declaration
   32                    | import_declarations import_declaration

   33 type_declarations: type_declaration
   34                  | type_declarations type_declaration

   35 package_declaration: NAMESPACE_TK name ';'

   36 import_declaration: single_type_import_declaration

   37 single_type_import_declaration: USE_TK name ';'

   38 type_declaration: class_declaration
   39                 | empty_statement

   40 modifiers: modifier
   41          | modifiers modifier

   42 modifier: PUBLIC_TK
   43         | PRIVATE_TK
   44         | FINAL_TK
   45         | ABSTRACT_TK
   46         | STATIC_TK
   47         | PROTECTED_TK

   48 $@1: /* empty */

   49 class_declaration: modifiers CLASS_TK identifier super interfaces $@1 class_body

   50 $@2: /* empty */

   51 class_declaration: CLASS_TK identifier super interfaces $@2 class_body

   52 super: /* empty */
   53      | EXTENDS_TK class_type

   54 interfaces: /* empty */
   55           | IMPLEMENTS_TK interface_type_list

   56 interface_type_list: interface_type
   57                    | interface_type_list ',' interface_type

   58 class_body: '{' '}'
   59           | '{' class_body_declarations '}'

   60 class_body_declarations: class_body_declaration
   61                        | class_body_declarations class_body_declaration

   62 class_body_declaration: class_member_declaration
   63                       | constructor_declaration
   64                       | block

   65 class_member_declaration: field_declaration
   66                         | method_declaration
   67                         | class_declaration
   68                         | empty_statement

   69 field_declaration: type variable_declarators ';'
   70                  | modifiers type variable_declarators ';'

   71 variable_declarators: variable_declarator
   72                     | variable_declarators ',' variable_declarator

   73 variable_declarator: variable_declarator_id
   74                    | variable_declarator_id ASSIGN_TK variable_initializer

   75 variable_declarator_id: identifier
   76                       | variable_declarator_id '[' ']'

   77 variable_initializer: expression
   78                     | array_initializer

   79 method_declaration: method_header method_body

   80 method_header: type method_declarator
   81              | VOID_TK method_declarator
   82              | modifiers type method_declarator
   83              | modifiers VOID_TK method_declarator

   84 method_declarator: identifier '(' ')'
   85                  | identifier '(' formal_parameter_list ')'

   86 formal_parameter_list: formal_parameter
   87                      | formal_parameter_list ',' formal_parameter

   88 formal_parameter: type variable_declarator_id

   89 method_body: block
   90            | ';'

   91 $@3: /* empty */

   92 constructor_declaration: constructor_header $@3 constructor_body

   93 constructor_header: constructor_declarator
   94                   | modifiers constructor_declarator

   95 constructor_declarator: simple_name '(' ')'
   96                       | simple_name '(' formal_parameter_list ')'

   97 constructor_body: block_begin constructor_block_end
   98                 | block_begin explicit_constructor_invocation constructor_block_end
   99                 | block_begin block_statements constructor_block_end
  100                 | block_begin explicit_constructor_invocation block_statements constructor_block_end

  101 constructor_block_end: block_end

  102 explicit_constructor_invocation: this_or_parent '(' ')' ';'
  103                                | this_or_parent '(' argument_list ')' ';'

  104 this_or_parent: THIS_TK
  105               | PARENT_TK

  106 array_initializer: '{' '}'
  107                  | '{' variable_initializers '}'
  108                  | '{' variable_initializers ',' '}'

  109 variable_initializers: variable_initializer
  110                      | variable_initializers ',' variable_initializer

  111 block: '{' '}'
  112      | block_begin block_statements block_end

  113 block_begin: '{'

  114 block_end: '}'

  115 block_statements: block_statement
  116                 | block_statements block_statement

  117 block_statement: local_variable_declaration_statement
  118                | statement
  119                | class_declaration

  120 local_variable_declaration_statement: local_variable_declaration ';'

  121 final: FINAL_TK

  122 local_variable_declaration: type variable_declarators
  123                           | final type variable_declarators

  124 statement: statement_without_trailing_substatement
  125          | labeled_statement
  126          | if_then_statement
  127          | if_then_else_statement
  128          | while_statement
  129          | for_statement

  130 statement_nsi: statement_without_trailing_substatement
  131              | labeled_statement_nsi
  132              | if_then_else_statement_nsi
  133              | while_statement_nsi
  134              | for_statement_nsi

  135 statement_without_trailing_substatement: block
  136                                        | empty_statement
  137                                        | expression_statement
  138                                        | switch_statement
  139                                        | do_statement
  140                                        | break_statement
  141                                        | continue_statement
  142                                        | return_statement
  143                                        | synchronized_statement
  144                                        | throw_statement
  145                                        | try_statement

  146 empty_statement: ';'

  147 label_decl: identifier ':'

  148 labeled_statement: label_decl statement

  149 labeled_statement_nsi: label_decl statement_nsi

  150 expression_statement: statement_expression ';'

  151 statement_expression: assignment
  152                     | pre_increment_expression
  153                     | pre_decrement_expression
  154                     | post_increment_expression
  155                     | post_decrement_expression
  156                     | method_invocation
  157                     | class_instance_creation_expression

  158 if_then_statement: IF_TK '(' expression ')' statement

  159 if_then_else_statement: IF_TK '(' expression ')' statement_nsi ELSE_TK statement

  160 if_then_else_statement_nsi: IF_TK '(' expression ')' statement_nsi ELSE_TK statement_nsi

  161 $@4: /* empty */

  162 switch_statement: switch_expression $@4 switch_block

  163 switch_expression: SWITCH_TK '(' expression ')'

  164 switch_block: '{' '}'
  165             | '{' switch_labels '}'
  166             | '{' switch_block_statement_groups '}'
  167             | '{' switch_block_statement_groups switch_labels '}'

  168 switch_block_statement_groups: switch_block_statement_group
  169                              | switch_block_statement_groups switch_block_statement_group

  170 switch_block_statement_group: switch_labels block_statements

  171 switch_labels: switch_label
  172              | switch_labels switch_label

  173 switch_label: CASE_TK constant_expression ':'
  174             | DEFAULT_TK ':'

  175 while_expression: WHILE_TK '(' expression ')'

  176 while_statement: while_expression statement

  177 while_statement_nsi: while_expression statement_nsi

  178 do_statement_begin: DO_TK

  179 do_statement: do_statement_begin statement WHILE_TK '(' expression ')' ';'

  180 for_statement: for_begin ';' expression ';' for_update ')' statement
  181              | for_begin ';' ';' for_update ')' statement

  182 for_statement_nsi: for_begin ';' expression ';' for_update ')' statement_nsi
  183                  | for_begin ';' ';' for_update ')' statement_nsi

  184 for_header: FOR_TK '('

  185 for_begin: for_header for_init

  186 for_init: /* empty */
  187         | statement_expression_list
  188         | local_variable_declaration

  189 for_update: /* empty */
  190           | statement_expression_list

  191 statement_expression_list: statement_expression
  192                          | statement_expression_list ',' statement_expression

  193 break_statement: BREAK_TK ';'
  194                | BREAK_TK identifier ';'

  195 continue_statement: CONTINUE_TK ';'
  196                   | CONTINUE_TK identifier ';'

  197 return_statement: RETURN_TK ';'
  198                 | RETURN_TK expression ';'

  199 throw_statement: THROW_TK expression ';'

  200 synchronized_statement: synchronized '(' expression ')' block

  201 synchronized: modifiers

  202 try_statement: TRY_TK block catches
  203              | TRY_TK block finally
  204              | TRY_TK block catches finally

  205 catches: catch_clause
  206        | catches catch_clause

  207 catch_clause: catch_clause_parameter block

  208 catch_clause_parameter: CATCH_TK '(' formal_parameter ')'

  209 finally: FINALLY_TK block

  210 primary: primary_no_new_array
  211        | array_creation_expression

  212 primary_no_new_array: literal
  213                     | THIS_TK
  214                     | '(' expression ')'
  215                     | class_instance_creation_expression
  216                     | field_access
  217                     | method_invocation
  218                     | array_access
  219                     | type_literals
  220                     | name '.' THIS_TK

  221 type_literals: name '.' CLASS_TK
  222              | array_type '.' CLASS_TK
  223              | primitive_type '.' CLASS_TK
  224              | VOID_TK '.' CLASS_TK

  225 class_instance_creation_expression: NEW_TK class_type '(' argument_list ')'
  226                                   | NEW_TK class_type '(' ')'
  227                                   | anonymous_class_creation

  228 $@5: /* empty */

  229 anonymous_class_creation: NEW_TK class_type '(' argument_list ')' $@5 class_body

  230 $@6: /* empty */

  231 anonymous_class_creation: NEW_TK class_type '(' ')' $@6 class_body

  232 argument_list: expression
  233              | argument_list ',' expression

  234 array_creation_expression: NEW_TK primitive_type dim_exprs
  235                          | NEW_TK class_or_interface_type dim_exprs
  236                          | NEW_TK primitive_type dim_exprs dims
  237                          | NEW_TK class_or_interface_type dim_exprs dims
  238                          | NEW_TK class_or_interface_type dims array_initializer
  239                          | NEW_TK primitive_type dims array_initializer

  240 dim_exprs: dim_expr
  241          | dim_exprs dim_expr

  242 dim_expr: '[' expression ']'

  243 dims: '[' ']'
  244     | dims '[' ']'

  245 field_access: primary '.' identifier
  246             | PARENT_TK '.' identifier

  247 method_invocation: name '(' ')'
  248                  | name '(' argument_list ')'
  249                  | primary '.' identifier '(' ')'
  250                  | primary '.' identifier '(' argument_list ')'
  251                  | PARENT_TK '.' identifier '(' ')'
  252                  | PARENT_TK '.' identifier '(' argument_list ')'

  253 array_access: name '[' expression ']'
  254             | primary_no_new_array '[' expression ']'

  255 postfix_expression: primary
  256                   | name
  257                   | post_increment_expression
  258                   | post_decrement_expression

  259 post_increment_expression: postfix_expression INCR_TK

  260 post_decrement_expression: postfix_expression DECR_TK

  261 unary_expression: pre_increment_expression
  262                 | pre_decrement_expression
  263                 | PLUS_TK unary_expression
  264                 | MINUS_TK unary_expression
  265                 | unary_expression_not_plus_minus

  266 pre_increment_expression: INCR_TK unary_expression

  267 pre_decrement_expression: DECR_TK unary_expression

  268 unary_expression_not_plus_minus: postfix_expression
  269                                | NOT_TK unary_expression
  270                                | NEG_TK unary_expression
  271                                | cast_expression

  272 cast_expression: '(' primitive_type dims ')' unary_expression
  273                | '(' primitive_type ')' unary_expression
  274                | '(' expression ')' unary_expression_not_plus_minus
  275                | '(' name dims ')' unary_expression_not_plus_minus

  276 multiplicative_expression: unary_expression
  277                          | multiplicative_expression MULT_TK unary_expression
  278                          | multiplicative_expression DIV_TK unary_expression
  279                          | multiplicative_expression REM_TK unary_expression

  280 additive_expression: multiplicative_expression
  281                    | additive_expression PLUS_TK multiplicative_expression
  282                    | additive_expression MINUS_TK multiplicative_expression

  283 shift_expression: additive_expression
  284                 | shift_expression LS_TK additive_expression
  285                 | shift_expression RS_TK additive_expression

  286 relational_expression: shift_expression
  287                      | relational_expression LT_TK shift_expression
  288                      | relational_expression GT_TK shift_expression
  289                      | relational_expression LTE_TK shift_expression
  290                      | relational_expression GTE_TK shift_expression
  291                      | relational_expression INSTANCEOF_TK reference_type

  292 equality_expression: relational_expression
  293                    | equality_expression EQ_TK relational_expression
  294                    | equality_expression NEQ_TK relational_expression

  295 and_expression: equality_expression
  296               | and_expression AND_TK equality_expression

  297 exclusive_or_expression: and_expression
  298                        | exclusive_or_expression XOR_TK and_expression

  299 inclusive_or_expression: exclusive_or_expression
  300                        | inclusive_or_expression OR_TK exclusive_or_expression

  301 conditional_and_expression: inclusive_or_expression
  302                           | conditional_and_expression BOOL_AND_TK inclusive_or_expression

  303 conditional_or_expression: conditional_and_expression
  304                          | conditional_or_expression BOOL_OR_TK conditional_and_expression

  305 conditional_expression: conditional_or_expression
  306                       | conditional_or_expression REL_QM_TK expression ':' conditional_expression

  307 assignment_expression: conditional_expression
  308                      | assignment

  309 assignment: left_hand_side assignment_operator assignment_expression

  310 left_hand_side: name
  311               | field_access
  312               | array_access

  313 assignment_operator: ASSIGN_ANY_TK
  314                    | ASSIGN_TK

  315 expression: assignment_expression

  316 constant_expression: expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 84 85 95 96 102 103 158 159 160 163 175 179 184 200 208 214
    225 226 229 231 247 248 249 250 251 252 272 273 274 275
')' (41) 84 85 95 96 102 103 158 159 160 163 175 179 180 181 182 183
    200 208 214 225 226 229 231 247 248 249 250 251 252 272 273 274
    275
',' (44) 57 72 87 108 110 192 233
'.' (46) 21 220 221 222 223 224 245 246 249 250 251 252
':' (58) 147 173 174 306
';' (59) 35 37 69 70 90 102 103 120 146 150 179 180 181 182 183 193
    194 195 196 197 198 199
'[' (91) 76 242 243 244 253 254
']' (93) 76 242 243 244 253 254
'{' (123) 58 59 106 107 108 111 113 164 165 166 167
'}' (125) 58 59 106 107 108 111 114 164 165 166 167
error (256)
PLUS_TK (258) 263 281
MINUS_TK (259) 264 282
MULT_TK (260) 277
DIV_TK (261) 278
REM_TK (262) 279
LS_TK (263) 284
RS_TK (264) 285
AND_TK (265) 296
XOR_TK (266) 298
OR_TK (267) 300
BOOL_AND_TK (268) 302
BOOL_OR_TK (269) 304
EQ_TK (270) 293
NEQ_TK (271) 294
GT_TK (272) 288
GTE_TK (273) 290
LT_TK (274) 287
LTE_TK (275) 289
PLUS_ASSIGN_TK (276)
MINUS_ASSIGN_TK (277)
MULT_ASSIGN_TK (278)
DIV_ASSIGN_TK (279)
REM_ASSIGN_TK (280)
LS_ASSIGN_TK (281)
SRS_ASSIGN_TK (282)
ZRS_ASSIGN_TK (283)
AND_ASSIGN_TK (284)
XOR_ASSIGN_TK (285)
OR_ASSIGN_TK (286)
PUBLIC_TK (287) 42
PRIVATE_TK (288) 43
PROTECTED_TK (289) 47
STATIC_TK (290) 46
FINAL_TK (291) 44 121
SYNC_TK (292)
VOLATILE_TK (293)
NATIVE_TK (294)
ABSTRACT_TK (295) 45
DECR_TK (296) 260 267
INCR_TK (297) 259 266
DEFAULT_TK (298) 174
IF_TK (299) 158 159 160
THROW_TK (300) 199
BOOLEAN_TK (301) 10
DO_TK (302) 178
IMPLEMENTS_TK (303) 55
THROWS_TK (304)
BREAK_TK (305) 193 194
USE_TK (306) 37
ELSE_TK (307) 159 160
INSTANCEOF_TK (308) 291
RETURN_TK (309) 197 198
VOID_TK (310) 81 83 224
CATCH_TK (311) 208
INTERFACE_TK (312)
CASE_TK (313) 173
EXTENDS_TK (314) 53
FINALLY_TK (315) 209
PARENT_TK (316) 105 246 251 252
WHILE_TK (317) 175 179
CLASS_TK (318) 49 51 221 222 223 224
SWITCH_TK (319) 163
CONST_TK (320)
TRY_TK (321) 202 203 204
FOR_TK (322) 184
NEW_TK (323) 225 226 229 231 234 235 236 237 238 239
CONTINUE_TK (324) 195 196
GOTO_TK (325)
NAMESPACE_TK (326) 35
THIS_TK (327) 104 213 220
BYTE_TK (328)
SHORT_TK (329)
INT_TK (330)
LONG_TK (331)
CHAR_TK (332)
INTEGRAL_TK (333) 8
FLOAT_TK (334)
DOUBLE_TK (335)
FP_TK (336) 9
ID_TK (337) 22
REL_QM_TK (338) 306
NOT_TK (339) 269
NEG_TK (340) 270
ASSIGN_ANY_TK (341) 313
ASSIGN_TK (342) 74 314
STRING_LIT_TK (343) 4
INT_LIT_TK (344) 1
FP_LIT_TK (345) 2
TRUE_TK (346)
FALSE_TK (347)
BOOL_LIT_TK (348) 3
NULL_TK (349) 5


Nonterminals, with rules where they appear

$accept (105)
    on left: 0
literal (106)
    on left: 1 2 3 4 5, on right: 212
type (107)
    on left: 6 7, on right: 69 70 80 82 88 122 123
primitive_type (108)
    on left: 8 9 10, on right: 6 16 223 234 236 239 272 273
reference_type (109)
    on left: 11 12, on right: 7 291
class_or_interface_type (110)
    on left: 13, on right: 11 14 15 235 237 238
class_type (111)
    on left: 14, on right: 53 225 226 229 231
interface_type (112)
    on left: 15, on right: 56 57
array_type (113)
    on left: 16 17, on right: 12 222
name (114)
    on left: 18 19, on right: 13 17 21 35 37 220 221 247 248 253 256
    275 310
simple_name (115)
    on left: 20, on right: 18 95 96
qualified_name (116)
    on left: 21, on right: 19
identifier (117)
    on left: 22, on right: 20 21 49 51 75 84 85 147 194 196 245 246
    249 250 251 252
program (118)
    on left: 23 24 25 26 27 28 29 30, on right: 0
import_declarations (119)
    on left: 31 32, on right: 25 27 29 30 32
type_declarations (120)
    on left: 33 34, on right: 26 28 29 30 34
package_declaration (121)
    on left: 35, on right: 24 27 28 30
import_declaration (122)
    on left: 36, on right: 31 32
single_type_import_declaration (123)
    on left: 37, on right: 36
type_declaration (124)
    on left: 38 39, on right: 33 34
modifiers (125)
    on left: 40 41, on right: 41 49 70 82 83 94 201
modifier (126)
    on left: 42 43 44 45 46 47, on right: 40 41
class_declaration (127)
    on left: 49 51, on right: 38 67 119
$@1 (128)
    on left: 48, on right: 49
$@2 (129)
    on left: 50, on right: 51
super (130)
    on left: 52 53, on right: 49 51
interfaces (131)
    on left: 54 55, on right: 49 51
interface_type_list (132)
    on left: 56 57, on right: 55 57
class_body (133)
    on left: 58 59, on right: 49 51 229 231
class_body_declarations (134)
    on left: 60 61, on right: 59 61
class_body_declaration (135)
    on left: 62 63 64, on right: 60 61
class_member_declaration (136)
    on left: 65 66 67 68, on right: 62
field_declaration (137)
    on left: 69 70, on right: 65
variable_declarators (138)
    on left: 71 72, on right: 69 70 72 122 123
variable_declarator (139)
    on left: 73 74, on right: 71 72
variable_declarator_id (140)
    on left: 75 76, on right: 73 74 76 88
variable_initializer (141)
    on left: 77 78, on right: 74 109 110
method_declaration (142)
    on left: 79, on right: 66
method_header (143)
    on left: 80 81 82 83, on right: 79
method_declarator (144)
    on left: 84 85, on right: 80 81 82 83
formal_parameter_list (145)
    on left: 86 87, on right: 85 87 96
formal_parameter (146)
    on left: 88, on right: 86 87 208
method_body (147)
    on left: 89 90, on right: 79
constructor_declaration (148)
    on left: 92, on right: 63
$@3 (149)
    on left: 91, on right: 92
constructor_header (150)
    on left: 93 94, on right: 92
constructor_declarator (151)
    on left: 95 96, on right: 93 94
constructor_body (152)
    on left: 97 98 99 100, on right: 92
constructor_block_end (153)
    on left: 101, on right: 97 98 99 100
explicit_constructor_invocation (154)
    on left: 102 103, on right: 98 100
this_or_parent (155)
    on left: 104 105, on right: 102 103
array_initializer (156)
    on left: 106 107 108, on right: 78 238 239
variable_initializers (157)
    on left: 109 110, on right: 107 108 110
block (158)
    on left: 111 112, on right: 64 89 135 200 202 203 204 207 209
block_begin (159)
    on left: 113, on right: 97 98 99 100 112
block_end (160)
    on left: 114, on right: 101 112
block_statements (161)
    on left: 115 116, on right: 99 100 112 116 170
block_statement (162)
    on left: 117 118 119, on right: 115 116
local_variable_declaration_statement (163)
    on left: 120, on right: 117
final (164)
    on left: 121, on right: 123
local_variable_declaration (165)
    on left: 122 123, on right: 120 188
statement (166)
    on left: 124 125 126 127 128 129, on right: 118 148 158 159 176
    179 180 181
statement_nsi (167)
    on left: 130 131 132 133 134, on right: 149 159 160 177 182 183
statement_without_trailing_substatement (168)
    on left: 135 136 137 138 139 140 141 142 143 144 145, on right:
    124 130
empty_statement (169)
    on left: 146, on right: 39 68 136
label_decl (170)
    on left: 147, on right: 148 149
labeled_statement (171)
    on left: 148, on right: 125
labeled_statement_nsi (172)
    on left: 149, on right: 131
expression_statement (173)
    on left: 150, on right: 137
statement_expression (174)
    on left: 151 152 153 154 155 156 157, on right: 150 191 192
if_then_statement (175)
    on left: 158, on right: 126
if_then_else_statement (176)
    on left: 159, on right: 127
if_then_else_statement_nsi (177)
    on left: 160, on right: 132
switch_statement (178)
    on left: 162, on right: 138
$@4 (179)
    on left: 161, on right: 162
switch_expression (180)
    on left: 163, on right: 162
switch_block (181)
    on left: 164 165 166 167, on right: 162
switch_block_statement_groups (182)
    on left: 168 169, on right: 166 167 169
switch_block_statement_group (183)
    on left: 170, on right: 168 169
switch_labels (184)
    on left: 171 172, on right: 165 167 170 172
switch_label (185)
    on left: 173 174, on right: 171 172
while_expression (186)
    on left: 175, on right: 176 177
while_statement (187)
    on left: 176, on right: 128
while_statement_nsi (188)
    on left: 177, on right: 133
do_statement_begin (189)
    on left: 178, on right: 179
do_statement (190)
    on left: 179, on right: 139
for_statement (191)
    on left: 180 181, on right: 129
for_statement_nsi (192)
    on left: 182 183, on right: 134
for_header (193)
    on left: 184, on right: 185
for_begin (194)
    on left: 185, on right: 180 181 182 183
for_init (195)
    on left: 186 187 188, on right: 185
for_update (196)
    on left: 189 190, on right: 180 181 182 183
statement_expression_list (197)
    on left: 191 192, on right: 187 190 192
break_statement (198)
    on left: 193 194, on right: 140
continue_statement (199)
    on left: 195 196, on right: 141
return_statement (200)
    on left: 197 198, on right: 142
throw_statement (201)
    on left: 199, on right: 144
synchronized_statement (202)
    on left: 200, on right: 143
synchronized (203)
    on left: 201, on right: 200
try_statement (204)
    on left: 202 203 204, on right: 145
catches (205)
    on left: 205 206, on right: 202 204 206
catch_clause (206)
    on left: 207, on right: 205 206
catch_clause_parameter (207)
    on left: 208, on right: 207
finally (208)
    on left: 209, on right: 203 204
primary (209)
    on left: 210 211, on right: 245 249 250 255
primary_no_new_array (210)
    on left: 212 213 214 215 216 217 218 219 220, on right: 210 254
type_literals (211)
    on left: 221 222 223 224, on right: 219
class_instance_creation_expression (212)
    on left: 225 226 227, on right: 157 215
anonymous_class_creation (213)
    on left: 229 231, on right: 227
$@5 (214)
    on left: 228, on right: 229
$@6 (215)
    on left: 230, on right: 231
argument_list (216)
    on left: 232 233, on right: 103 225 229 233 248 250 252
array_creation_expression (217)
    on left: 234 235 236 237 238 239, on right: 211
dim_exprs (218)
    on left: 240 241, on right: 234 235 236 237 241
dim_expr (219)
    on left: 242, on right: 240 241
dims (220)
    on left: 243 244, on right: 16 17 236 237 238 239 244 272 275
field_access (221)
    on left: 245 246, on right: 216 311
method_invocation (222)
    on left: 247 248 249 250 251 252, on right: 156 217
array_access (223)
    on left: 253 254, on right: 218 312
postfix_expression (224)
    on left: 255 256 257 258, on right: 259 260 268
post_increment_expression (225)
    on left: 259, on right: 154 257
post_decrement_expression (226)
    on left: 260, on right: 155 258
unary_expression (227)
    on left: 261 262 263 264 265, on right: 263 264 266 267 269 270
    272 273 276 277 278 279
pre_increment_expression (228)
    on left: 266, on right: 152 261
pre_decrement_expression (229)
    on left: 267, on right: 153 262
unary_expression_not_plus_minus (230)
    on left: 268 269 270 271, on right: 265 274 275
cast_expression (231)
    on left: 272 273 274 275, on right: 271
multiplicative_expression (232)
    on left: 276 277 278 279, on right: 277 278 279 280 281 282
additive_expression (233)
    on left: 280 281 282, on right: 281 282 283 284 285
shift_expression (234)
    on left: 283 284 285, on right: 284 285 286 287 288 289 290
relational_expression (235)
    on left: 286 287 288 289 290 291, on right: 287 288 289 290 291
    292 293 294
equality_expression (236)
    on left: 292 293 294, on right: 293 294 295 296
and_expression (237)
    on left: 295 296, on right: 296 297 298
exclusive_or_expression (238)
    on left: 297 298, on right: 298 299 300
inclusive_or_expression (239)
    on left: 299 300, on right: 300 301 302
conditional_and_expression (240)
    on left: 301 302, on right: 302 303 304
conditional_or_expression (241)
    on left: 303 304, on right: 304 305 306
conditional_expression (242)
    on left: 305 306, on right: 306 307
assignment_expression (243)
    on left: 307 308, on right: 309 315
assignment (244)
    on left: 309, on right: 151 308
left_hand_side (245)
    on left: 310 311 312, on right: 309
assignment_operator (246)
    on left: 313 314, on right: 309
expression (247)
    on left: 315, on right: 77 158 159 160 163 175 179 180 182 198
    199 200 214 232 233 242 253 254 274 306 316
constant_expression (248)
    on left: 316, on right: 173


state 0

    0 $accept: . program $end

    PUBLIC_TK     shift, and go to state 1
    PRIVATE_TK    shift, and go to state 2
    PROTECTED_TK  shift, and go to state 3
    STATIC_TK     shift, and go to state 4
    FINAL_TK      shift, and go to state 5
    ABSTRACT_TK   shift, and go to state 6
    USE_TK        shift, and go to state 7
    CLASS_TK      shift, and go to state 8
    NAMESPACE_TK  shift, and go to state 9
    ';'           shift, and go to state 10

    $default  reduce using rule 23 (program)

    program                         go to state 11
    import_declarations             go to state 12
    type_declarations               go to state 13
    package_declaration             go to state 14
    import_declaration              go to state 15
    single_type_import_declaration  go to state 16
    type_declaration                go to state 17
    modifiers                       go to state 18
    modifier                        go to state 19
    class_declaration               go to state 20
    empty_statement                 go to state 21


state 1

   42 modifier: PUBLIC_TK .

    $default  reduce using rule 42 (modifier)


state 2

   43 modifier: PRIVATE_TK .

    $default  reduce using rule 43 (modifier)


state 3

   47 modifier: PROTECTED_TK .

    $default  reduce using rule 47 (modifier)


state 4

   46 modifier: STATIC_TK .

    $default  reduce using rule 46 (modifier)


state 5

   44 modifier: FINAL_TK .

    $default  reduce using rule 44 (modifier)


state 6

   45 modifier: ABSTRACT_TK .

    $default  reduce using rule 45 (modifier)


state 7

   37 single_type_import_declaration: USE_TK . name ';'

    ID_TK  shift, and go to state 22

    name            go to state 23
    simple_name     go to state 24
    qualified_name  go to state 25
    identifier      go to state 26


state 8

   51 class_declaration: CLASS_TK . identifier super interfaces $@2 class_body

    ID_TK  shift, and go to state 22

    identifier  go to state 27


state 9

   35 package_declaration: NAMESPACE_TK . name ';'

    ID_TK  shift, and go to state 22

    name            go to state 28
    simple_name     go to state 24
    qualified_name  go to state 25
    identifier      go to state 26


state 10

  146 empty_statement: ';' .

    $default  reduce using rule 146 (empty_statement)


state 11

    0 $accept: program . $end

    $end  shift, and go to state 29


state 12

   25 program: import_declarations .
   29        | import_declarations . type_declarations
   32 import_declarations: import_declarations . import_declaration

    PUBLIC_TK     shift, and go to state 1
    PRIVATE_TK    shift, and go to state 2
    PROTECTED_TK  shift, and go to state 3
    STATIC_TK     shift, and go to state 4
    FINAL_TK      shift, and go to state 5
    ABSTRACT_TK   shift, and go to state 6
    USE_TK        shift, and go to state 7
    CLASS_TK      shift, and go to state 8
    ';'           shift, and go to state 10

    $default  reduce using rule 25 (program)

    type_declarations               go to state 30
    import_declaration              go to state 31
    single_type_import_declaration  go to state 16
    type_declaration                go to state 17
    modifiers                       go to state 18
    modifier                        go to state 19
    class_declaration               go to state 20
    empty_statement                 go to state 21


state 13

   26 program: type_declarations .
   34 type_declarations: type_declarations . type_declaration

    PUBLIC_TK     shift, and go to state 1
    PRIVATE_TK    shift, and go to state 2
    PROTECTED_TK  shift, and go to state 3
    STATIC_TK     shift, and go to state 4
    FINAL_TK      shift, and go to state 5
    ABSTRACT_TK   shift, and go to state 6
    CLASS_TK      shift, and go to state 8
    ';'           shift, and go to state 10

    $default  reduce using rule 26 (program)

    type_declaration   go to state 32
    modifiers          go to state 18
    modifier           go to state 19
    class_declaration  go to state 20
    empty_statement    go to state 21


state 14

   24 program: package_declaration .
   27        | package_declaration . import_declarations
   28        | package_declaration . type_declarations
   30        | package_declaration . import_declarations type_declarations

    PUBLIC_TK     shift, and go to state 1
    PRIVATE_TK    shift, and go to state 2
    PROTECTED_TK  shift, and go to state 3
    STATIC_TK     shift, and go to state 4
    FINAL_TK      shift, and go to state 5
    ABSTRACT_TK   shift, and go to state 6
    USE_TK        shift, and go to state 7
    CLASS_TK      shift, and go to state 8
    ';'           shift, and go to state 10

    $default  reduce using rule 24 (program)

    import_declarations             go to state 33
    type_declarations               go to state 34
    import_declaration              go to state 15
    single_type_import_declaration  go to state 16
    type_declaration                go to state 17
    modifiers                       go to state 18
    modifier                        go to state 19
    class_declaration               go to state 20
    empty_statement                 go to state 21


state 15

   31 import_declarations: import_declaration .

    $default  reduce using rule 31 (import_declarations)


state 16

   36 import_declaration: single_type_import_declaration .

    $default  reduce using rule 36 (import_declaration)


state 17

   33 type_declarations: type_declaration .

    $default  reduce using rule 33 (type_declarations)


state 18

   41 modifiers: modifiers . modifier
   49 class_declaration: modifiers . CLASS_TK identifier super interfaces $@1 class_body

    PUBLIC_TK     shift, and go to state 1
    PRIVATE_TK    shift, and go to state 2
    PROTECTED_TK  shift, and go to state 3
    STATIC_TK     shift, and go to state 4
    FINAL_TK      shift, and go to state 5
    ABSTRACT_TK   shift, and go to state 6
    CLASS_TK      shift, and go to state 35

    modifier  go to state 36


state 19

   40 modifiers: modifier .

    $default  reduce using rule 40 (modifiers)


state 20

   38 type_declaration: class_declaration .

    $default  reduce using rule 38 (type_declaration)


state 21

   39 type_declaration: empty_statement .

    $default  reduce using rule 39 (type_declaration)


state 22

   22 identifier: ID_TK .

    $default  reduce using rule 22 (identifier)


state 23

   21 qualified_name: name . '.' identifier
   37 single_type_import_declaration: USE_TK name . ';'

    '.'  shift, and go to state 37
    ';'  shift, and go to state 38


state 24

   18 name: simple_name .

    $default  reduce using rule 18 (name)


state 25

   19 name: qualified_name .

    $default  reduce using rule 19 (name)


state 26

   20 simple_name: identifier .

    $default  reduce using rule 20 (simple_name)


state 27

   51 class_declaration: CLASS_TK identifier . super interfaces $@2 class_body

    EXTENDS_TK  shift, and go to state 39

    $default  reduce using rule 52 (super)

    super  go to state 40


state 28

   21 qualified_name: name . '.' identifier
   35 package_declaration: NAMESPACE_TK name . ';'

    '.'  shift, and go to state 37
    ';'  shift, and go to state 41


state 29

    0 $accept: program $end .

    $default  accept


state 30

   29 program: import_declarations type_declarations .
   34 type_declarations: type_declarations . type_declaration

    PUBLIC_TK     shift, and go to state 1
    PRIVATE_TK    shift, and go to state 2
    PROTECTED_TK  shift, and go to state 3
    STATIC_TK     shift, and go to state 4
    FINAL_TK      shift, and go to state 5
    ABSTRACT_TK   shift, and go to state 6
    CLASS_TK      shift, and go to state 8
    ';'           shift, and go to state 10

    $default  reduce using rule 29 (program)

    type_declaration   go to state 32
    modifiers          go to state 18
    modifier           go to state 19
    class_declaration  go to state 20
    empty_statement    go to state 21


state 31

   32 import_declarations: import_declarations import_declaration .

    $default  reduce using rule 32 (import_declarations)


state 32
